botones en html e informacion javascript

--- a/Practica2/index.html
+++ b/Practica2/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Javascript curso</title>
+    <title>Aplicación PAM</title>
 </head>
 <body>
+    <h1>Aplicación PAM</h1>
+
+    <div class="botones">
+        <button onclick="mostrar('ReglamentoPOO')">Reglamento POO</button>
+        <button onclick="mostrar('LineamientosClassroom')">Lineamientos Classroom</button>
+        <button onclick="mostrar('FechasdeParciales')">Fechas de Parciales</button>
+        <button onclick="mostrar('PorcentajesporParcial')">Porcentajes Parciales</button>
+    </div>
 
     <script src="app.js"></script>
-    
 </body>
 </html>
