--- a/Practica2/index.html
+++ b/Practica2/index.html
@@ -8,10 +8,10 @@
     <h1>Aplicación PAM</h1>
 
     <div class="botones">
-        <button onclick="mostrar('ReglamentoPOO')">Reglamento POO</button>
-        <button onclick="mostrar('LineamientosClassroom')">Lineamientos Classroom</button>
+        <button onclick="mostrar('ReglamentoPOO')">Reglamento de POO</button>
+        <button onclick="mostrar('LineamientosClassroom')">Lineamientos de Classroom</button>
         <button onclick="mostrar('FechasdeParciales')">Fechas de Parciales</button>
-        <button onclick="mostrar('PorcentajesporParcial')">Porcentajes Parciales</button>
+        <button onclick="mostrar('PorcentajesporParcial')">Porcentajes por Parciales</button>
     </div>
 
     <script src="app.js"></script>
