--- a/Practica 1/index.html
+++ b/Practica 1/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="cuadrado.js"></script>
+    <script src="saludoPersonalizado.js"></script>
 </body>
 </html>
