Ejercicio 2, uso de map y filter

--- a/Practica 2/index.html
+++ b/Practica 2/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="objetopersona.js"></script>
+    <script src="productos.js"></script>
 </body>
 </html>
