--- a/Practica 3/index.html
+++ b/Practica 3/index.html
@@ -6,7 +6,7 @@
     <title>Practica 3</title>
 </head>
 <body>
-    <script type="module" src="./Ejercicio 1/main.js"></script>
+    <script type="module" src="./Ejercicio 2/verificarUsuario.js"></script>
     
 </body>
 </html>
